--- a/styles/style.css
+++ b/styles/style.css
@@ -8,24 +8,95 @@ body {
     background-image: url("/images/bg-pattern-top.svg"), url("/images/bg-pattern-bottom.svg");
     background-color: hsl(185, 75%, 39%);
     background-repeat: no-repeat;
-    background-position: -120% 290%, 200% -290%;
+    background-position: -120% 290%, 200% -250%;
     position: relative;
     width: 100%;
     height: 800px;
     display: flex;
     flex-direction: column-reverse;
+    font-size: 100%;
 }
 
 .container {
-    width: 25%;
+    width: 28%;
     height: 400px;
     position: absolute;
     top: 50%;
     left: 50%;
     margin-top: -200px;
-    margin-left: -12.5%;
+    margin-left: -14%;
     background-image: url("/images/bg-pattern-card.svg");
     background-repeat: no-repeat;
     background-color: white;
+    background-size: 100% 36%;
     border-radius: 10px;
+    font-family: "Kumbh Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-variation-settings: "YOPQ" 300;
+    color: hsl(229, 23%, 23%);
 }
+
+.image {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.image img {
+    border-radius: 60px;
+    border: 5px solid white;
+    margin-top: 25%;
+    text-align: center;
+}
+
+.content h1 {
+    text-align: center;
+    font-size: 18px;
+    margin-top: 15px;
+    font-weight: 700;
+}
+
+.content span {
+    color: hsl(227, 10%, 46%);
+    font-weight: 400;
+}
+
+.content h2 {
+    text-align: center;
+    color: hsl(227, 10%, 46%);
+    font-weight: 400;
+    font-size: 14px;
+    margin-top: 2%;
+    border-bottom: 1px solid hsl(0, 0%, 59%);
+    padding-bottom: 7%;
+}
+
+.data {
+    width: 100%;
+    height: 118px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+.follow, .like, .photo {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.follow h3, .like h3, .photo h3 {
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.follow p, .like p, .photo p {
+    font-weight: 400;
+    font-size: 9px;
+    color: hsl(227, 10%, 46%);
+    margin-top: 10%;
+    letter-spacing: 2px;
+}
+
